[gd_scene load_steps=7 format=2]

[ext_resource path="res://assets/background.png" type="Texture" id=1]
[ext_resource path="res://assets/theme/ButtonTheme.tres" type="Theme" id=2]
[ext_resource path="res://assets/theme/PhoneticTheme.tres" type="Theme" id=3]
[ext_resource path="res://GameChoose.gd" type="Script" id=4]
[ext_resource path="res://assets/icons/back.png" type="Texture" id=5]
[ext_resource path="res://assets/theme/DejaVuFont.tres" type="DynamicFont" id=6]

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 3 )
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 1 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Main" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Control" type="Control" parent="Main"]
margin_right = 1024.0
margin_bottom = 600.0

[node name="MarginContainer" type="MarginContainer" parent="Main/Control"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Main/Control/MarginContainer"]
margin_right = 1024.0
margin_bottom = 600.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GooseGame" type="Button" parent="Main/Control/MarginContainer/VBoxContainer"]
margin_top = 128.0
margin_right = 1024.0
margin_bottom = 240.0
theme = ExtResource( 2 )
custom_fonts/font = ExtResource( 6 )
text = "Jeu de l'oie"

[node name="Listen&Choose" type="Button" parent="Main/Control/MarginContainer/VBoxContainer"]
margin_top = 244.0
margin_right = 1024.0
margin_bottom = 356.0
theme = ExtResource( 2 )
custom_fonts/font = ExtResource( 6 )
text = "Ecoute & Choisis"

[node name="MemoryGame" type="Button" parent="Main/Control/MarginContainer/VBoxContainer"]
margin_top = 360.0
margin_right = 1024.0
margin_bottom = 472.0
theme = ExtResource( 2 )
custom_fonts/font = ExtResource( 6 )
text = "Memory"

[node name="Back" type="Button" parent="Main/Control"]
margin_top = 2.0
margin_right = 100.0
margin_bottom = 104.0
theme = ExtResource( 3 )
icon = ExtResource( 5 )
flat = true
expand_icon = true
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="Main/Control/MarginContainer/VBoxContainer/GooseGame" to="." method="_on_GooseGame_pressed"]
[connection signal="pressed" from="Main/Control/MarginContainer/VBoxContainer/Listen&Choose" to="." method="_on_ListenChoose_pressed"]
[connection signal="pressed" from="Main/Control/MarginContainer/VBoxContainer/MemoryGame" to="." method="_on_MemoryGame_pressed"]
[connection signal="pressed" from="Main/Control/Back" to="." method="_on_Back_pressed"]
